--- a/website/src/pages/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/src/pages/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -2,34 +2,30 @@ import { PackageCmd, Callout } from '@theguild/components'
 
 # Integration with Cloudflare Workers
 
-GraphQL Yoga provides you with a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
+GraphQL Yoga provides you a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
 
 [Cloudflare Workers](https://developers.cloudflare.com/workers) provides a serverless execution environment that allows you to create entirely new applications or augment existing ones without configuring or maintaining infrastructure.
 
 You will want to use the package `@graphql-yoga/common` which has an agnostic HTTP handler using [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch)'s [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) and [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) objects when building GraphQL powered Cloudflare Workers.
 
-<Callout type="info">
+<Callout>
   Watch [Episode #48 of
   `graphql.wtf`](https://graphql.wtf/episodes/48-graphql-yoga-cloudflare-workers-kv)
   for a quick introduction to using GraphQL Yoga with Cloudflare Workers, and
   KV:
 </Callout>
 
-<br />
-
 <iframe
-  width="100%"
-  height="400"
+  className="mt-6 h-[400px] w-full"
   src="https://www.youtube.com/embed/xibiwSXMLsc"
   title="Using GraphQL Yoga with Cloudflare Workers, and KV"
-  frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
-></iframe>
+/>
 
 ## Installation
 
-<PackageCmd packages={['graphql', '@graphql-yoga/common']} />
+<PackageCmd packages={['@graphql-yoga/common graphql']} />
 
 ## Example with Regular `fetch` Event Listener
 
@@ -41,9 +37,9 @@ const server = createServer()
 server.start()
 ```
 
-<Callout type="info">
+<Callout>
   You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/service-worker)
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/service-worker).
 </Callout>
 
 ## Example with Modules Approach
@@ -56,7 +52,7 @@ export default createServer()
 
 ### Access to environmental values (KV Namespaces etc.)
 
-You can access your KV namespaces etc through the context.
+You can access your KV namespaces etc. through the context.
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
@@ -65,7 +61,7 @@ interface Env {
   MY_NAMESPACE: KVNamespace
 }
 
-export createServer<Env>({
+export default createServer<Env>({
   typeDefs: /* GraphQL */`
     type Query {
       todo(id: ID!): String
@@ -112,14 +108,14 @@ export default {
 }
 ```
 
-<Callout type="info">
+<Callout>
   You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare-modules)
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare-modules).
 </Callout>
 
 ## Enabling Subscriptions
 
-To enable Server-Sent Events based subscriptions with Cloudflare Workers, you should add a compatibility flag in your wrangler configuration file like below;
+To enable Server-Sent Events based subscriptions with Cloudflare Workers, you should add a compatibility flag in your wrangler configuration file like below:
 
 ```toml
 compatibility_flags = ["streams_enable_constructors"]
