--- a/website/src/pages/docs/features/cors.mdx
+++ b/website/src/pages/docs/features/cors.mdx
@@ -1,16 +1,18 @@
 # Configuring CORS with Yoga
 
-CORS stands for Cross-Origin Resource Sharing. In a nutshell, as a security measure, browsers aren't allowed to access resources outside their domain.
+CORS stands for Cross-Origin Resource Sharing. In a nutshell, as a security measure, browsers aren't allowed to access resources outside their own domain.
 
 If your API and web apps are deployed to different domains (or subdomains), you'll have to worry about CORS. For example, if your web client is deployed to example.com but your Yoga server is api.example.com. For security reasons, your browser will not allow XHR requests (like the kind that the GraphQL client makes) to a domain other than the one currently in the browser's address bar.
 
 To deal with this you have two options:
 
-1. Avoid CORS by proxying your requests\_
-   e.g. If you setup a proxy or redirect to forward requests from `example.com/api/*` to `api.example.com`, you avoid CORS issues all together.
+1. **Avoid CORS by proxying your requests**
 
-2. Configure Yoga to send back CORS headers\_
-   Yoga comes with CORS support out of the box - CORS can be configured when creating the server either by passing a CORSOptions object, or a builder function that returns the CORSOptions object.
+If you setup a proxy or redirect to forward requests from `example.com/api/*` to `api.example.com`, you avoid CORS issues all together.
+
+2. **Configure Yoga to send back CORS headers**
+
+Yoga comes with CORS support out of the box - CORS can be configured when creating the server either by passing a CORSOptions object, or a builder function that returns the CORSOptions object.
 
 ```ts
 export type CORSOptions =
@@ -25,7 +27,7 @@ export type CORSOptions =
   | false
 ```
 
-### Example Configuration Using CORSOptions
+### Example Configuration Using `CORSOptions`
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
@@ -43,7 +45,7 @@ const yogaApp = createServer({
 
 This will return the following headers:
 
-```
+```text
 Access-Control-Allow-Origin: 'http://localhost:4000'
 Access-Control-Allow-Credentials: true
 Access-Control-Allow-Methods: POST
@@ -58,7 +60,7 @@ You can also pass a function to the cors property, that takes your request and c
 import { createServer } from '@graphql-yoga/common'
 
 const yogaApp = createServer({
-  cors: (request) => {
+  cors(request) {
     const requestOrigin = request.headers.get('origin')
     return {
       origin: requestOrigin,
@@ -80,9 +82,7 @@ This means cross-origin requests from browsers work out of the box - however, it
 
 ## Disabling CORS
 
-You can disable CORS on your Yoga server by simply passing `false` as the cors property
-
-### Disabling CORS Example
+You can disable CORS on your Yoga server by simply passing `false` as the cors property. For example::
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
@@ -93,4 +93,4 @@ const yogaApp = createServer({
 })
 ```
 
-This will remove all Access-Control headers from the response.
+This will remove all `Access-Control` headers from the response.
