--- a/website/src/pages/docs/features/file-uploads.mdx
+++ b/website/src/pages/docs/features/file-uploads.mdx
@@ -4,19 +4,17 @@ GraphQL Yoga supports [GraphQL Multipart Request Specification](https://github.c
 
 In GraphQL Yoga, you consume uploaded files or blobs as WHATWG standard [`File`](https://developer.mozilla.org/en-US/docs/Web/API/File) or [`Blob`](https://developer.mozilla.org/en-US/docs/Web/API/Blob) objects you might be familiar from the browser's API.
 
-[Check out MDN documentation to learn more about `File` objects](https://developer.mozilla.org/en-US/docs/Web/API/File)
+[Check out MDN documentation to learn more about `File` objects](https://developer.mozilla.org/en-US/docs/Web/API/File).
 
 You can use any kind of client to support GraphQL Upload specification.
-[Check out here to find GraphQL Client solutions](https://github.com/jaydenseric/graphql-multipart-request-spec#client)
+[Check out here to find GraphQL Client solutions](https://github.com/jaydenseric/graphql-multipart-request-spec#client).
 
 ## Example
 
 You only need to add a scalar type definition for file uploads in your schema. The name of the scalar doesn't matter.
-Let's use `File` in this example.
+Let's use `File` in this example:
 
-`file-upload-example.ts`
-
-```ts
+```ts filename="file-upload-example.ts"
 import { createServer } from '@graphql-yoga/node'
 import fs from 'fs'
 import path from 'path'
@@ -45,7 +43,7 @@ const server = createServer({
          * You don't need to install/import anything else
          * for both `File` GraphQL Scalar and this type
          */
-        readTextFile: async (_, { file }: { file: File }) => {
+        async readTextFile(_, { file }: { file: File }) {
           const textContent = await file.text()
           return textContent
         },
@@ -69,7 +67,7 @@ const server = createServer({
 server.start()
 ```
 
-### Test Your GraphQL Server with `cURL`
+### Test Your GraphQL Server with cURL
 
 ```sh
 curl localhost:4000/graphql \
@@ -78,13 +76,11 @@ curl localhost:4000/graphql \
   -F 0=@mytext.txt
 ```
 
-### With [GraphQL Nexus](https://nexusjs.org/)
+### With GraphQL Nexus
 
-You need to create a scalar type for file upload in your schema.
+You need to create a scalar type for file upload in your schema:
 
-`nexus-file-upload-example.ts`
-
-```ts
+```ts filename="nexus-file-upload-example.ts"
 import {
   makeSchema,
   scalarType,
@@ -110,7 +106,7 @@ const greetings = queryField('greetings', {
 const readTextFile = mutationField('readTextFile', {
   type: 'String',
   args: { file: nonNull(arg({ type: 'File' })) },
-  resolve: async (parent, { file }, ctx) => {
+  async resolve(parent, { file }) {
     const textContent = await file.text()
     return textContent
   },
@@ -120,9 +116,7 @@ const schema = makeSchema({
   types: [FileScalar, greetings, readTextFile],
 })
 
-const server = createServer({
-  schema: schema,
-})
+const server = createServer({ schema: schema })
 
 // Start the server and explore http://localhost:4000/graphql
 server.start()
@@ -130,12 +124,10 @@ server.start()
 
 ## Disabling Multipart/File Upload Processing
 
-If you want to disable multipart request processing for some reason, you can pass `multipart: false` to prevent Yoga from handling multipart requests.
+If you want to disable multipart request processing for some reason, you can pass `multipart: false{:ts}` to prevent Yoga from handling multipart requests.
 
 ```ts
-createServer({
-  multipart: false,
-})
+createServer({ multipart: false })
 ```
 
 ## Configuring Multipart Request Processing (only for Node.js)
