--- a/website/src/pages/docs/features/testing.mdx
+++ b/website/src/pages/docs/features/testing.mdx
@@ -17,7 +17,7 @@ console.assert(response.status === 200, 'Response status should be 200')
 console.assert(
   executionResult.data.greetings ===
     'This is the `greetings` field of the root `Query` type',
-  `Expected 'This is the `greetings` field of the root `Query` type' but got ${executionResult.data.greetings}`,
+  `Expected 'This is the \`greetings\` field of the root \`Query\` type' but got ${executionResult.data.greetings}`,
 )
 ```
 
@@ -25,6 +25,8 @@ console.assert(
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
+
+const yoga = createServer()
 
 const response = await yoga.fetch('http://localhost:4000/graphql', {
   method: 'POST',
@@ -41,7 +43,7 @@ const executionResult = await response.json()
 console.assert(
   executionResult.data.greetings ===
     'This is the `greetings` field of the root `Query` type',
-  `Expected 'This is the `greetings` field of the root `Query` type' but got ${executionResult.data.greetings}`,
+  `Expected 'This is the \`greetings\` field of the root \`Query\` type' but got ${executionResult.data.greetings}`,
 )
 ```
 
@@ -50,7 +52,7 @@ console.assert(
 ```ts
 import { createServer } from '@graphql-yoga/node'
 import request from 'supertest'
-import { deepEqual } from 'assert'
+import { deepEqual } from 'node:assert'
 
 const yoga = createServer()
 
