--- a/website/src/pages/docs/integrations/integration-with-aws-lambda.mdx
+++ b/website/src/pages/docs/integrations/integration-with-aws-lambda.mdx
@@ -2,13 +2,13 @@ import { PackageCmd, Callout } from '@theguild/components'
 
 # Integration with AWS Lambda
 
-AWS Lambda is a serverless computing platform that makes it easy to build applications that run on the AWS cloud. GraphQL Yoga is platform agnostic so they can fit together easily.
+AWS Lambda is a serverless computing platform that makes it easy to build applications that run on the AWS cloud. GraphQL Yoga is platform-agnostic so they can fit together easily.
 To reduce the boilerplate we prefer to use [Serverless Express from Vendia](https://github.com/vendia/serverless-express).
 
 ## Installation
 
 <PackageCmd
-  packages={['graphql', '@vendia/serverless-express', '@graphql-yoga/node']}
+  packages={['@vendia/serverless-express @graphql-yoga/node graphql']}
 />
 
 ## Example
@@ -28,7 +28,7 @@ export const handler: Handler = configure({
 })
 ```
 
-<Callout type="info">
+<Callout>
   You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/aws-lambda)
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/aws-lambda).
 </Callout>
