--- a/website/src/pages/docs/integrations/integration-with-express.mdx
+++ b/website/src/pages/docs/integrations/integration-with-express.mdx
@@ -2,16 +2,16 @@ import { PackageCmd, Callout } from '@theguild/components'
 
 # Integration with Express
 
-[Express is the most popular web framework for Node.js.](https://expressjs.com/) It is a minimalist framework that provides a robust set of features to handle HTTP on Node.js applications.
+[Express](https://expressjs.com) is the most popular web framework for Node.js. It is a minimalist framework that provides a robust set of features to handle HTTP on Node.js applications.
 You can easily integrate GraphQL Yoga into your Express application with a few lines of code.
 
 ## Installation
 
-<PackageCmd packages={['express', 'graphql', '@graphql-yoga/node']} />
+<PackageCmd packages={['@graphql-yoga/node express graphql']} />
 
 ## Example
 
-```ts filename="express-example.ts"
+```ts
 import express from 'express'
 import { createServer } from '@graphql-yoga/node'
 
@@ -27,7 +27,7 @@ app.listen(4000, () => {
 })
 ```
 
-<Callout type="info">
+<Callout>
   You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/express)
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/express).
 </Callout>
