--- a/website/src/pages/docs/integrations/integration-with-koa.mdx
+++ b/website/src/pages/docs/integrations/integration-with-koa.mdx
@@ -2,12 +2,12 @@ import { PackageCmd, Callout } from '@theguild/components'
 
 # Integration with Koa
 
-[Koa is a new web framework designed by the team behind Express, which aims to be a smaller, more expressive, and more robust foundation for web applications and APIs.](https://koajs.com/)
+[Koa](https://koajs.com) is a new web framework designed by the team behind Express, which aims to be a smaller, more expressive, and more robust foundation for web applications and APIs.
 GraphQL Yoga can be integrated easily as a route to the existing Koa application with a few lines of code. [So you can benefit from middlewares written for Koa with GraphQL Yoga.](https://github.com/koajs/koa/wiki)
 
 ## Installation
 
-<PackageCmd packages={['koa', 'graphql', '@graphql-yoga/node']} />
+<PackageCmd packages={['@graphql-yoga/node koa graphql']} />
 
 ## Example
 
@@ -41,7 +41,7 @@ app.listen(4000, () => {
 })
 ```
 
-<Callout type="info">
+<Callout>
   You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/koa)
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/koa).
 </Callout>
