--- a/website/src/pages/docs/integrations/integration-with-nestjs.mdx
+++ b/website/src/pages/docs/integrations/integration-with-nestjs.mdx
@@ -2,7 +2,7 @@ import { PackageCmd, Callout } from '@theguild/components'
 
 # Integration with Nest
 
-[Nest (Nest JS)](https://nestjs.com/) is a progressive Node.js framework for building efficient, reliable and scalable server-side applications.
+[NestJS](https://nestjs.com) is a progressive Node.js framework for building efficient, reliable and scalable server-side applications.
 
 GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypoly/graphql-yoga-nestjs) that supports building standalone GraphQL APIs and Federation GraphQL APIs (Gateway and Services).
 
@@ -10,9 +10,9 @@ GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypol
 
 ### Installation
 
-<PackageCmd packages={['@nestjs/graphql', '@graphql-yoga/nestjs']} />
+<PackageCmd packages={['@graphql-yoga/nestjs @nestjs/graphql']} />
 
-<Callout type="info">
+<Callout>
   For the setup of a new Nest project, please make sure to read the [Nest
   GraphQL documentation](https://docs.nestjs.com/graphql/quick-start).
 </Callout>
@@ -21,7 +21,7 @@ GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypol
 
 With the following Nest project structure:
 
-```bash
+```text
 - src/
   - cats/
     - cats.graphql
@@ -166,7 +166,7 @@ Yoga Nest GraphQL integration supports building Apollo Federation Gateway and Se
 
 A complete example [is available in the repository](https://github.com/charlypoly/graphql-yoga-nestjs/tree/master/examples/graphql-federation-code-first).
 
-<Callout type="warning">
+<Callout type="warning" emoji='⚠️'>
   `YogaGatewayDriver` and `YogaFederationDriver` drivers should be used with
   `graphql@15`.
 </Callout>
