--- a/website/src/pages/docs/integrations/integration-with-nextjs.mdx
+++ b/website/src/pages/docs/integrations/integration-with-nextjs.mdx
@@ -1,16 +1,16 @@
 import { PackageCmd, Callout } from '@theguild/components'
 
-# Integration with Nextjs
+# Integration with Next.js
 
-[Next.js](https://nextjs.org/) is a web framework that allows you to build websites very quickly and GraphQL Yoga can be integrated with Next.js easily as [an API Route](https://nextjs.org/docs/api-routes/api-middlewares).
+[Next.js](https://nextjs.org) is a web framework that allows you to build websites very quickly and GraphQL Yoga can be integrated with Next.js easily as [an API Route](https://nextjs.org/docs/api-routes/api-middlewares).
 
 ## Installation
 
-<PackageCmd packages={['graphql', '@graphql-yoga/node']} />
+<PackageCmd packages={['@graphql-yoga/node graphql']} />
 
 ## Example
 
-```ts filename="pages/api/graphql.ts"
+```ts filename="pages/aрi/graphql.ts"
 // Next.js API route support: https://nextjs.org/docs/api-routes/introduction
 import { createServer } from '@graphql-yoga/node'
 import type { NextApiRequest, NextApiResponse } from 'next'
@@ -28,7 +28,7 @@ export default createServer<{
 }>()
 ```
 
-<Callout type="info">
+<Callout>
   You can also check a full example on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/nextjs)
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/nextjs).
 </Callout>
