--- a/website/src/pages/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/src/pages/docs/integrations/integration-with-sveltekit.mdx
@@ -2,21 +2,21 @@ import { PackageCmd, Callout } from '@theguild/components'
 
 # Integration with SvelteKit
 
-[SvelteKit is the fastest way to build svelte apps.](https://kit.svelte.dev/) It is very simple and lets you build the frontend & backend in a single place.
+[SvelteKit](https://kit.svelte.dev) is the fastest way to build svelte apps. It is very simple and lets you build the frontend & backend in a single place.
 
-You can add GraphQL Yoga with a few lines of code and get the benefits of GraphQL & SvelteKit at the same time. [Envelop ecosystem](https://www.envelop.dev) for example!
+You can add GraphQL Yoga with a few lines of code and get the benefits of GraphQL & SvelteKit at the same time. [Envelop ecosystem](https://envelop.dev) for example!
 
 ## Installation
 
 In a SvelteKit project:
 
-<PackageCmd packages={['graphql', '@graphql-yoga/common']} />
+<PackageCmd packages={['@graphql-yoga/common graphql']} />
 
 ## Example
 
 ### Create your GraphQL Endpoint
 
-Create the file `src/routes/api/graphql.ts`:
+Create the following file:
 
 ```ts filename="src/routes/api/graphql.ts"
 import { createServer } from '@graphql-yoga/common'
@@ -24,11 +24,11 @@ import type { RequestEvent } from '@sveltejs/kit'
 
 const yogaApp = createServer<RequestEvent>({
   schema: {
-    typeDefs: `
-			type Query {
-				hello: String
-			}
-		`,
+    typeDefs: /* GraphQL */`
+      type Query {
+        hello: String
+      }
+    `,
     resolvers: {
       Query: {
         hello: () => 'SvelteKit - GraphQL Yoga',
@@ -43,12 +43,13 @@ const yogaApp = createServer<RequestEvent>({
 export { yogaApp as get, yogaApp as post }
 ```
 
-<Callout type="info">
-  **Simple example** on our GitHub repository
-  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/sveltekit)
+<Callout>
+  Simple example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/sveltekit).
 </Callout>
-<Callout type="info">
-  More examples with our **KitQL** library
-  [here](https://github.com/jycouet/kitql)
+
+<Callout emoji='🪄'>
+  More examples with our KitQL library
+  [here](https://github.com/jycouet/kitql). The best of all GraphQL ecosystem for SvelteKit.
 </Callout>
-<Callout type="info">The best of all GraphQL ecosystem for SvelteKit.</Callout>
+
