--- a/website/src/pages/docs/integrations/z-other-environments.mdx
+++ b/website/src/pages/docs/integrations/z-other-environments.mdx
@@ -2,7 +2,7 @@
 
 If you have a different environment that you want to integrate with, you can implement your middleware/handler like the example below.
 
-GraphQL Yoga understands [WHATWG `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) object to consume your HTTP request. So you need an adapter implementation between your environment and WHATWG standard objects.
+GraphQL Yoga understands [WHATWG `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) to consume your HTTP request. So you need an adapter implementation between your environment and WHATWG standard objects.
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
@@ -10,7 +10,7 @@ import { Request } from '@whatwg-node/fetch' // or fetch-like library
 
 const yoga = createServer<MyRandomCtx>()
 
-export function myMiddleware(req: MyRandomRequest, ctx: MyRandomCtx) {
+export async function myMiddleware(req: MyRandomRequest, ctx: MyRandomCtx) {
   // req.url is a full url here not a relative path
   const request = new Request(req.url, {
     method: req.method,
