--- a/website/src/pages/docs/migration/migration-from-express-graphql.mdx
+++ b/website/src/pages/docs/migration/migration-from-express-graphql.mdx
@@ -13,39 +13,39 @@ You can start by installing `graphql-yoga` package.
 You should replace Express GraphQL's middleware with GraphQL Yoga's;
 
 ```diff
-const express = require('express');
-- const { graphqlHTTP } = require('express-graphql');
-+ const { createServer } = require('@graphql-yoga/node');
-const { schema } = require('./schema');
+const express = require('express')
+- const { graphqlHTTP } = require('express-graphql')
++ const { createServer } = require('@graphql-yoga/node')
+const { schema } = require('./schema')
 
-const app = express();
+const app = express()
 
--app.use('/graphql', graphqlHTTP(req => ({
--  schema: schema,
--  context: {
--    token: req.headers.authorization
--  },
--  graphiql: true,
--})));
+- app.use('/graphql', graphqlHTTP(req => ({
+-   schema: schema,
+-   context: {
+-     token: req.headers.authorization
+-   },
+-   graphiql: true
+- })))
 
-+const yoga = createServer({
++ const yoga = createServer({
 +   schema,
 +   context: (req) => ({ // Context factory gets called for every request
-+      myToken: req.headers.get('authorization'),
++     myToken: req.headers.get('authorization')
 +   }),
-+   graphiql: true,
-+})
++   graphiql: true
++ })
 +
-+app.use('/graphql', yoga);
++ app.use('/graphql', yoga)
 
-app.listen(4000);
-console.log('Running a GraphQL API server at http://localhost:4000/graphql');
+app.listen(4000)
+console.log('Running a GraphQL API server at http://localhost:4000/graphql')
 ```
 
-<Callout type="info">
+<Callout >
   `schema`, `context` and other parameters can be passed dynamically per HTTP
   request. `context` parameter of GraphQL Yoga can be a factory function but
   `schema` cannot. So you should use
-  [@envelop/use-lazy-loaded-schema](https://www.envelop.dev/plugins/use-lazy-loaded-schema)
+  [@envelop/use-lazy-loaded-schema](https://envelop.dev/plugins/use-lazy-loaded-schema)
   for the same behavior.
 </Callout>
