--- a/website/src/pages/tutorial/advanced/03-advanced-sorting.mdx
+++ b/website/src/pages/tutorial/advanced/03-advanced-sorting.mdx
@@ -1,12 +1,12 @@
-import { Instruction } from '@theguild/components'
-
 # Advanced Sorting
 
 ## Sorting
 
-With Prisma, it is possible to return lists of elements that are sorted (_ordered_) according to specific criteria. For example, you can order the list of `Link`s alphabetically by their `url` or `description`. For the Hacker News API, you'll leave it up to the client to decide how exactly it should be sorted and thus include all the ordering options from the Prisma API in the API of your GraphQL server. You can do so by creating an [`input`](https://graphql.org/graphql-js/mutations-and-input-types/) type and an enum to represent the ordering options.
-
-<Instruction>
+With Prisma, it is possible to return lists of elements that are sorted (_ordered_) according to specific criteria.
+For example, you can order the list of `Link`s alphabetically by their `url` or `description`.
+For the Hacker News API, you'll leave it up to the client to decide how exactly it should be sorted and thus
+include all the ordering options from the Prisma API in the API of your GraphQL server. You can do so by creating
+an [`input`](https://graphql.org/graphql-js/mutations-and-input-types) type and an enum to represent the ordering options.
 
 Add the following enum definition to your GraphQL schema:
 
@@ -23,11 +23,7 @@ enum Sort {
 }
 ```
 
-</Instruction>
-
-This represents the various ways that the list of `Link` elements can be sorted (asc = ascending, desc = descending).
-
-<Instruction>
+This represents the various ways that the list of `Link` elements can be sorted (`asc` = ascending, `desc` = descending).
 
 Now, adjust the `Query.feed` field SDL again to include the `orderBy` argument:
 
@@ -44,11 +40,7 @@ type Query {
 }
 ```
 
-</Instruction>
-
 The implementation of the resolver is similar to what you just did with the pagination API.
-
-<Instruction>
 
 Update the implementation of the `feed` resolver, change the imports and pass the `orderBy` argument along to Prisma:
 
@@ -59,7 +51,7 @@ const resolvers = {
   // ... other resolvers ...
   Query: {
     // ... other resolvers ...
-    feed: async (
+    feed(
       parent: unknown,
       args: {
         filter?: string
@@ -72,7 +64,7 @@ const resolvers = {
         }
       },
       context: GraphQLContext,
-    ) => {
+    ) {
       const where = args.filter
         ? {
             OR: [
@@ -92,8 +84,6 @@ const resolvers = {
   },
 }
 ```
-
-</Instruction>
 
 Awesome! Here's a query that sorts the returned links by their creation dates:
 
