--- a/website/src/pages/tutorial/basic/01-project-setup.mdx
+++ b/website/src/pages/tutorial/basic/01-project-setup.mdx
@@ -1,78 +1,63 @@
-import { Callout, Instruction, PackageCmd } from '@theguild/components'
+import { Callout, PackageCmd } from '@theguild/components'
 
 # Project Setup
 
 In this section, you will learn how to create a basic NodeJS project with TypeScript.
 
-This step will cover the initial NodeJS setup required, basic configuration for TypeScript projects, and how to setup the development scripts.
+This step will cover the initial Node.js setup required, basic configuration for TypeScript projects, and how to setup the development scripts.
 
 ## Requirements
 
-- Have NodeJS installed on your operation system ([instructions](https://nodejs.org/en/download/package-manager/)). You can use any recent version (14/16/17), but, we highly recommend using the stable Node.js 16 LTS release.
+- Have NodeJS installed on your operation system ([instructions](https://nodejs.org/en/download/package-manager)). You can use any recent version (14/16/17), but, we highly recommend using the stable Node.js 16 LTS release.
 - Your favorite terminal configured (you are going to use it a lot!)
 - Run `node -v`, `npm -v`, `npx -v` in your terminal and make sure these commands are available for use.
 
 ## Creating Node.js & TypeScript Project
 
-This tutorial teaches you how to build a NodeJS project from scratch, so the first thing you need to do is create the
-the directory that'll hold the files for your project:
-
-<Instruction>
+This tutorial teaches you how to build a NodeJS project from scratch, so the first thing you need to do is create the directory that'll hold the files for your project:
 
 Open your terminal, navigate to a location of your choice, and run the following commands:
 
-```bash
+```sh
 mkdir hackernews-node-ts
 cd hackernews-node-ts
 npm init -y
 ```
 
-</Instruction>
-
 This creates a new directory called `hackernews-node-ts` and initializes it with a `package.json` file.
 
 The `package.json` is the configuration file for the Node.js app you're building. It lists all dependencies and other configuration options (such as _scripts_) needed for the app.
 
-To add TypeScript support for your NodeJS project, do the following:
-
-<Instruction>
+To add TypeScript supports for your NodeJS project, do the following:
 
 In your project directory, install the packages required to run a TypeScript project:
 
 <PackageCmd
   packages={[
-    '--save-dev --save-exact typescript @types/node ts-node ts-node-dev cross-env',
+    '-D --save-exact typescript @types/node ts-node ts-node-dev cross-env',
   ]}
 />
-
-</Instruction>
 
 This will add the dependencies to your project under the `node_modules` folder, and update the `package.json`.
 
 The command above installs the following libraries:
 
 - `typescript` is the basic TypeScript language support and compiler.
-- `@types/node` is a package that contains the basic TypeScript types for the NodeJS environment.
+- `@types/node` is a package that contains the basic TypeScript types for Node.js environment.
 - `ts-node` and `ts-node-dev` are libraries that allow you to run `.ts` files directly, without a compilation step to JavaScript and automatically re-run your files after you apply file changes.
 - `cross-env` allows providing environment variables cross-platform (windows environment variables are different 🤷).
 
-<Instruction>
-
 Now, initialize a new TypeScript configuration for your project using the following command:
 
-```bash
+```sh
 npx tsc --init
 ```
 
-</Instruction>
-
-This will create a `tsconfig.json` file in your project. The [`tsconfig.json` is the TypeScript configuration file](https://www.typescriptlang.org/docs/handbook/tsconfig-json.html), and it exists per-project. This is where you tell TypeScript compiler which files to compile and how to compile.
-
-<Instruction>
+This will create a `tsconfig.json` file in your project. The [`tsconfig.json` is the TypeScript configuration file](https://typescriptlang.org/docs/handbook/tsconfig-json.html), and it exists per-project. This is where you tell TypeScript compiler which files to compile and how to compile.
 
 To make it easier to run your project, replace the `"scripts"` section in your `package.json` file with the following:
 
-```json filename="package.json"
+```json filename="package.json" {6-7}
 {
   "name": "hackernews-node-ts",
   "version": "1.0.0",
@@ -90,41 +75,35 @@ To make it easier to run your project, replace the `"scripts"` section in your `
 }
 ```
 
-</Instruction>
-
 This will allow you to run the following scripts in your project directory:
 
-- `npm run start` - Will start the server.
-- `npm run dev` - Will start the server and restarts it on every change.
-
-<Instruction>
+- `npm run start` - will start the server.
+- `npm run dev` - will start the server and restarts it on every change.
 
 Now create the root entry point for your project, by creating a file under `src/main.ts` with the following:
 
-```ts filename="main.ts"
+```ts filename="src/main.ts"
 console.log('Hello World!')
 ```
 
-</Instruction>
-
 And to run your server in watch mode, run in your terminal:
 
-```bash
+```sh
 npm run dev
 ```
 
-<Callout type="info">
+<Callout>
   Watch mode tracks your project's files and re-runs your project automatically
   on a file change.
 </Callout>
 
 You should now see some log output regarding your build process, followed by:
 
-```
+```text
 Hello World!
 ```
 
-<Callout type="info">
+<Callout>
   You can try to change the script, and notice that the server restarts
   automatically on every change!
 </Callout>
