--- a/website/src/pages/tutorial/basic/03-graphql-server.mdx
+++ b/website/src/pages/tutorial/basic/03-graphql-server.mdx
@@ -1,4 +1,4 @@
-import { Callout, Instruction, PackageCmd } from '@theguild/components'
+import { Callout, PackageCmd } from '@theguild/components'
 
 # GraphQL Server
 
@@ -6,32 +6,23 @@ Now that you have a GraphQL schema, and you understand the concept of GraphQL sc
 
 You are going to use the HTTP protocol to serve the GraphQL server, but note that there are other options for serving GraphQL - you can use WebSocket, SSE (Server-Sent Events) and basically any network transport protocol that you wish! (You can find a list of transport implementations at the end of this page)
 
-## Creating a GraphQL HTTP Server With Yoga
+## Creating a GraphQL HTTP Server with Yoga
 
 In this tutorial, we will be using `@graphql-yoga/node` for building our Node.js GraphQL HTTP server.
 
-<Callout type="info">
-  Yoga can also run on other platforms, such as Cloudflare Workers or DENO. [We
-  recommend checking out the integrations section in our documentation after
-  finishing the
-  tutorial.](/docs/integrations/integration-with-cloudflare-workers)
+<Callout>
+  Yoga can also run on other platforms, such as Cloudflare Workers or Deno. We
+  recommend checking out [the integrations section](/docs/integrations/integration-with-cloudflare-workers) in our documentation after
+  finishing the tutorial.
 </Callout>
-
-<br />
-
-<Instruction>
 
 You'll need the `@graphql-yoga/node` package available in your project, so install it using the following command:
 
 <PackageCmd packages={['--save-exact @graphql-yoga/node']} />
 
-</Instruction>
-
-<Instruction>
-
 Now, update `src/main.ts` to create a simple GraphQL HTTP server on port `4000`:
 
-```ts filename="main.ts"
+```ts filename="src/main.ts"
 import { createServer } from '@graphql-yoga/node'
 import { schema } from './schema'
 
@@ -43,13 +34,11 @@ async function main() {
 main()
 ```
 
-</Instruction>
-
 Now, try to run your server again with `npm run dev` (or, `npm run start`).
 
 The output should look similar to the following:
 
-```bash
+```text
 $ cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts
 [INFO] 15:40:14 ts-node-dev ver. 1.1.8 (using ts-node ver. 9.1.1, typescript ver. 4.5.5)
 [2022-02-25 14:40:17.810 +0000] DEBUG (13296 on DESKTOP-U72CGKK): Setting up server.
@@ -57,8 +46,6 @@ $ cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts
 ```
 
 Now open your browser and navigate to `http://localhost:4000/graphql`.
-
-<Instruction>
 
 Type in the following operation in the left editor section and press the `Play` button for executing the operation against the GraphQL server.
 
@@ -68,8 +55,6 @@ query {
 }
 ```
 
-</Instruction>
-
 Unsurprisingly, the result looks like the following:
 
 ```json
@@ -78,15 +63,11 @@ Unsurprisingly, the result looks like the following:
 
 Of course, it is also possible to send requests to the service without GraphiQL, e.g. by using `curl`.
 
-<Instruction>
-
 Run the following command within your terminal for executing the same query operation.
 
-```bash
+```sh
 curl -X POST http://localhost:4000/graphql -H "Content-type: application/json" --data-raw '{"query": "query { hello }"}'
 ```
-
-</Instruction>
 
 Oh wonder, the result looks like the following:
 
