--- a/website/src/pages/tutorial/basic/04-a-simple-query.mdx
+++ b/website/src/pages/tutorial/basic/04-a-simple-query.mdx
@@ -1,4 +1,4 @@
-import { Callout, Instruction, PackageCmd } from '@theguild/components'
+import { Callout } from '@theguild/components'
 
 # A Simple Query
 
@@ -16,11 +16,9 @@ This process is also referred to as the _schema-driven_ or _schema-first develop
 
 So, let's go ahead and tackle the first step, extending the GraphQL schema definition.
 
-<Instruction>
-
 In `src/schema.ts`, update the GraphQL schema to look as follows:
 
-```ts filename="schema.ts"
+```ts filename="src/schema.ts"
 const typeDefinitions = /* GraphQL */ `
   type Query {
     info: String!
@@ -35,13 +33,11 @@ const typeDefinitions = /* GraphQL */ `
 `
 ```
 
-</Instruction>
-
 Pretty straightforward, right? You're defining a new `Link` object type that represents the links that can be posted to Hacker
 News. Each `Link` entity has an `id`, a `description`, and a `url` field. You're then adding another field to the root `Query` type
 that allows you to retrieve a list of `Link` elements. This list is guaranteed to never be `null` (if there isn't anything, the list must be empty) and never contain any elements that are `null` - that's what the two exclamation marks are for.
 
-<Callout type="info">
+<Callout>
   If you wish to read more about GraphQL and nullability, go ahead to [GraphQL
   official documentation](https://graphql.org/learn/schema/#lists-and-non-null).
 </Callout>
@@ -52,11 +48,9 @@ The next step is to implement the resolver function for the `feed` query field. 
 that not only _root fields_, but virtually _all_ fields on the types in a GraphQL schema have resolver functions. So,
 you'll add resolver functions for the `id`, `description`, and `url` fields of the `Link` type as well.
 
-<Instruction>
-
 In `src/schema.ts`, add a new list with dummy data as well and update the `resolvers` to look as follows:
 
-```ts filename="schema.ts"
+```ts filename="src/schema.ts"
 // 1
 type Link = {
   id: string
@@ -88,21 +82,19 @@ const resolvers = {
 }
 ```
 
-</Instruction>
-
 Let's walk through the numbered comments again:
 
-1. The `Link` type defines the TypeScript object structure that we wish to use in our code.
+1. The `Link` type defines the TypeScript object structure that we wish to use in our code
 2. The `links` variable is used to store the links at runtime. For now, everything is stored only _in-memory_ rather
-   than being persisted in a database.
+   than being persisted in a database
 3. You're adding a new resolver for the `feed` root field. Notice that a resolver always has to be named _exactly_ after
-   the corresponding field from the schema definition.
+   the corresponding field from the schema definition
 4. Finally, you're adding three more resolvers for the fields on the `Link` type from the schema definition. We'll
-   discuss what the `parent` argument that's passed into the resolver here is in a bit.
+   discuss what the `parent` argument that's passed into the resolver here is in a bit
 
 Go ahead and test the implementation by running the server and navigating to `http://localhost:4000/graphql` in your browser. If you expand the documentation of the GraphiQL, you'll notice that another field on the root `Query` object type called `feed` is now available:
 
-[![another `Query` root type field called feed](/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)](/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)
+![another `Query` root type field called feed](../../../../public/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)
 
 Try it out by sending the following query operation via GraphiQL:
 
@@ -132,13 +124,13 @@ Awesome, the server responds with the data you defined in `links`:
 }
 ```
 
-[![data returned from the server](/assets/tutorial/basic/04-a-simple-query/feed-query-response.png)](/assets/tutorial/basic/04-a-simple-query/feed-query-response.png)
+![data returned from the server](../../../../public/assets/tutorial/basic/04-a-simple-query/feed-query-response.png)
 
 Feel free to play around with the query by removing any fields from the selection set and observing the responses sent by the server.
 
 ### The Query Resolution Process
 
-Let's now quickly talk about how a GraphQL server resolves incoming requests. As you already saw, a GraphQL operation contains selection set of _fields_ that have their source in the type definitions of the GraphQL schema.
+Let's now quickly talk about how a GraphQL server resolves incoming requests. As you already saw, a GraphQL operation contains a selections set of _fields_ that have their source in the type definitions of the GraphQL schema.
 
 Let's consider the following query operation from above again:
 
@@ -163,7 +155,7 @@ Right now all the resolvers for the `Link` type follow a very simple and trivial
 Link: {
   id: (parent: Link) => parent.id,
   description: (parent: Link) => parent.description,
-  url: (parent: Link) => parent.url,
+  url: (parent: Link) => parent.url
 }
 ```
 
@@ -174,17 +166,19 @@ The first argument, commonly called `parent` (or sometimes `root`) is the result
 Well, as you already saw, GraphQL operation selection sets can be _nested_. Each level of nesting (i.e. nested curly braces) corresponds
 to one resolver execution level. The above query operation. Therefore, has two of these execution levels.
 
-On the first level, it invokes the `Query.feed` resolver and returns the entire data stored in `links`. For the second execution level, the GraphQL server is smart enough to invoke the resolvers of the `Link` type (because thanks to the schema, it knows that `feed` returns a list of `Link` elements) for each element inside the list that was returned on the previous resolver level. Therefore, in all of the three `Link` resolvers, the incoming `parent` object is the
-the element inside the `links` list.
+On the first level, it invokes the `Query.feed` resolver and returns the entire data stored in `links`. For the second execution level,
+the GraphQL server is smart enough to invoke the resolvers of the `Link` type (because thanks to the schema, it knows that `feed` returns
+a list of `Link` elements) for each element inside the list that was returned on the previous resolver level. Therefore, in all the three
+`Link` resolvers, the incoming `parent` object is the element inside the `links` list.
 
-<Callout type="info">
-  **Note**: To learn more about this, check out
+<Callout>
+  Note: To learn more about this, check out
   [this](https://www.prisma.io/blog/graphql-server-basics-the-schema-ac5e2950214e#9d03)
   article.
 </Callout>
 
-<Callout type="info">
+<Callout>
   The implementation of the `Link` resolvers is trivial, you can omit them and
   the server will work in the same way as it did before 👌 We just wanted you to
-  understand what's happening under the hood 🚗
+  understand what's happening under the hood 🚗.
 </Callout>
