--- a/website/src/pages/tutorial/basic/09-error-handling.mdx
+++ b/website/src/pages/tutorial/basic/09-error-handling.mdx
@@ -1,24 +1,22 @@
-import { Instruction } from '@theguild/components'
-
 # Error Handling
 
 In the previous chapter, you encountered an error while executing a `Mutation.postCommentOnLink` operation.
 In this chapter, you will learn the origin of this error and learn how to properly handle it.
 
-## Recap of The Encountered Error
+## Recap of the Encountered Error
 
-This is the resolver implementation that caused the issue when using a `linkId` that has no counterpart within the database.
+This is the resolver implementation that caused the issue when using a `linkId` that has no counter-part within the database.
 
 ```ts
 const resolvers = {
   // ... other resolver maps ...
   Mutation: {
     // ... other Mutation object type field resolver functions ...
-    postCommentOnLink: async (
+    async postCommentOnLink(
       parent: unknown,
       args: { linkId: string; body: string },
       context: GraphQLContext,
-    ) => {
+    ) {
       const comment = await context.prisma.comment.create({
         data: {
           body: args.body,
@@ -32,8 +30,6 @@ const resolvers = {
 }
 ```
 
-<Instruction>
-
 Execute the following GraphQL operation on GraphiQL:
 
 ```graphql
@@ -44,8 +40,6 @@ mutation postCommentOnLink {
   }
 }
 ```
-
-</Instruction>
 
 Again, this should yield the following error response:
 
@@ -74,21 +68,19 @@ Again, this should yield the following error response:
 ```
 
 As you can see the error includes an `extensions` `originalError` field.
-It includes a full stack trace of the original error for finding the cause easily.
+It includes a full stacktrace of the original error for finding the cause easily.
 
 ## Yoga Error Masking
 
-In a production environment, a stack trace that leaks to the outside world are a potential security threat as that information could be misused by malicious actors.
+In a production environment, a stacktrace that leaks to the outside world are a potential security threat as that information could be misused by malicious actors.
 
 The `extensions` `originalError` field is only present within an error if the server has been started with the `NODE_ENV` environment variable being set to `development`.
 
 As you might remember this is only the case when you are starting the server using `npm run dev`.
 
-<Instruction>
-
 Start the GraphQL server using the `npm run start` script.
 
-```bash
+```sh
 npm run start
 ```
 
@@ -102,8 +94,6 @@ mutation postCommentOnLink {
   }
 }
 ```
-
-</Instruction>
 
 Now you can see that there is no `originalError` within the errors array of the first object.
 
@@ -125,7 +115,7 @@ Now you can see that there is no `originalError` within the errors array of the 
 }
 ```
 
-This is great, but now we never know why our request failed 🤔and the error message `Unexpected error.` is also not helpful to anyone not aware of the exact resolver function implementation.
+This is great, but now we never know why our request failed 🤔 and the error message `Unexpected error.` is also not helpful to anyone not aware of the exact resolver function implementation.
 
 ## Exposing Safe Error Messages
 
@@ -133,9 +123,7 @@ Let's change the implementation to expose the much more helpful message `Cannot 
 
 For doing so you will use the `GraphQLYogaError` class that is exported from the `@graphql-yoga/node` package.
 
-<Instruction>
-
-Add the following catch handler for mapping a foreign key error into a `GraphQLYogaError`.
+Add the following catch handler for mapping a foreign key error into a `GraphQLYogaError`:
 
 ```ts
 // ... other imports ...
@@ -146,11 +134,11 @@ const resolvers = {
   // ... other resolver maps ...
   Mutation: {
     // ... other Mutation object type field resolver functions ...
-    postCommentOnLink: async (
+    async postCommentOnLink(
       parent: unknown,
       args: { linkId: string; body: string },
       context: GraphQLContext,
-    ) => {
+    ) {
       const comment = await context.prisma.comment
         .create({
           data: {
@@ -178,12 +166,8 @@ const resolvers = {
 }
 ```
 
-</Instruction>
-
-The error code `P2003` indicates a foreign key constraint error. [You can learn more about it in the Prisma documentation](https://www.prisma.io/docs/reference/api-reference/error-reference#p2003).
+The error code `P2003` indicates a foreign key constraint error. You can learn more about it in [the Prisma documentation](https://prisma.io/docs/reference/api-reference/error-reference#p2003).
 You use that code for identifying this edge case of a missing link and then throw a `GraphQLYogaError` with a useful error message instead.
-
-<Instruction>
 
 Restart the server using `npm run dev` and again execute the mutation operation using GraphiQL.
 
@@ -196,9 +180,7 @@ mutation postCommentOnLink {
 }
 ```
 
-</Instruction>
-
-You will receive a response with the `Cannot post a comment on the non-existing link with id '99999999999'.` message.
+You will receive a response with the `Cannot post comment on non-existing link with id '99999999999'.` message:
 
 ```json
 {
@@ -230,9 +212,7 @@ There is one more issue within The `Mutation.postCommentOnLink` field resolver.
 
 So far you only executed the mutation operation while using a string encoded integer value for the `linkId` argument.
 
-<Instruction>
-
-Execute that operation again using this non-integer value.
+Execute that operation again using this non-integer value:
 
 ```graphql
 mutation postCommentOnLink {
@@ -242,8 +222,6 @@ mutation postCommentOnLink {
   }
 }
 ```
-
-</Instruction>
 
 All seems good, right?
 
@@ -267,9 +245,7 @@ All seems good, right?
 
 Let's also try another non-integer string value.
 
-<Instruction>
-
-Execute that operation again using this non-integer value.
+Execute that operation again using this non-integer value:
 
 ```graphql
 mutation {
@@ -279,8 +255,6 @@ mutation {
   }
 }
 ```
-
-</Instruction>
 
 What the heck is happening now?
 
@@ -310,7 +284,7 @@ What the heck is happening now?
 
 You just encountered another unexpected error that got masked.
 
-Let's analyze the error message.
+Let's analyze the error message:
 
 ```
 Invalid `.create()` invocation in hackernews/src/schema.ts:93:10
@@ -330,8 +304,6 @@ To clarify that question we need to have a small excursion on how the [`parseInt
 
 There are multiple mathematical numeral systems. The implementation tries to be a bit smart and fault-tolerant. So, let's build a quick custom function, `parseIntSafe`, that first validates the string contents using a regex.
 
-<Instruction>
-
 Add the following code to the `src/schema.ts` file.
 
 ```ts filename="src/schema.ts"
@@ -348,11 +320,11 @@ const resolvers = {
   // ... other resolver maps ...
   Mutation: {
     // ... other field resolver functions
-    postCommentOnLink: async (
+    async postCommentOnLink(
       parent: unknown,
       args: { linkId: string; body: string },
       context: GraphQLContext,
-    ) => {
+    ) {
       const linkId = parseIntSafe(args.linkId)
       if (linkId === null) {
         return Promise.reject(
@@ -387,15 +359,11 @@ const resolvers = {
 }
 ```
 
-</Instruction>
-
 The regex `/^(\d+)$/` simply verifies that every character within the `value` is a digit. In case the value includes a non-digit character, you simply return `null` and then reject the resolver with a `GraphQLYogaError` error.
 
 Returning `null` instead of returning `NaN` is the better choice here, as it allows nice TypeScript checks (`linkId === null`).
 
-<Instruction>
-
-Execute that operation again using this non-integer value.
+Execute that operation again using this non-integer value:
 
 ```graphql
 mutation postCommentOnLink {
@@ -406,15 +374,13 @@ mutation postCommentOnLink {
 }
 ```
 
-</Instruction>
-
 All is good now. 🎉
 
 ```json
 {
   "errors": [
     {
-      "message": "Cannot post a comment on the non-existing link with id 'uuuuuu'.",
+      "message": "Cannot post comment on non-existing link with id 'uuuuuu'.",
       "locations": [
         {
           "line": 2,
