--- a/website/src/pages/tutorial/basic/10-filtering-and-pagination.mdx
+++ b/website/src/pages/tutorial/basic/10-filtering-and-pagination.mdx
@@ -1,4 +1,4 @@
-import { Instruction, Callout } from '@theguild/components'
+import { Callout } from '@theguild/components'
 
 # Filtering and Pagination
 
@@ -18,11 +18,9 @@ The first step is to think about the filters you want to expose through your API
 API will accept a _filter string_. The query then should only return the `Link` elements where the `url` _or_ the
 `description` _contain_ that filter string.
 
-<Instruction>
-
 Go ahead and add the `filter` argument definition of the type `String` to the `Query.feed` field definition within your application schema (under `src/schema.ts`):
 
-```graphql filename="schema.ts"
+```graphql filename="src/schema.ts"
 type Query {
   info: String!
   feed(filterNeedle: String): [Link!]!
@@ -30,24 +28,20 @@ type Query {
 }
 ```
 
-</Instruction>
-
 Next, you need to update the implementation of the `Query.feed` resolver function to account for the new arguments clients can send when executing a GraphQL query operation.
-
-<Instruction>
 
 Now, update the `Query.feed` resolver function to look as follows:
 
-```typescript
+```ts
 const resolvers = {
   // ... other resolver maps ...
   Query: {
     // ... other Query object type field resolver functions ...
-    feed: async (
+    async feed(
       parent: unknown,
       args: { filterNeedle?: string },
       context: GraphQLContext,
-    ) => {
+    ) {
       const where = args.filterNeedle
         ? {
             OR: [
@@ -62,8 +56,6 @@ const resolvers = {
   },
 }
 ```
-
-</Instruction>
 
 If no `filterNeedle` argument value is provided, then the `where` object will be just an empty object and no filtering conditions will be applied by Prisma Client when it resolves the data for the `Query.links` field.
 
@@ -92,28 +84,26 @@ query {
 
 Pagination is a tricky topic in API design. On a high level, there are two major approaches for tackling it:
 
-- **Limit-Offset**: Request a specific _chunk_ of the list by providing the indices of the items to be retrieved (in
-  fact, you're mostly providing the start index (_offset_) as well as a count of items to be retrieved (_limit_)).
+- **Limit-Offset**: Request a specific _chunk_ of the list by providing the indices of the items to be retrieved. In
+  fact, you're mostly providing the start index `offset` as well as a count of items to be retrieved `limit`.
 - **Cursor-Based**: This pagination model is a bit more advanced. Every element in the list is associated with a unique
   ID (the _cursor_). Clients paginating through the list then provide the cursor of the starting element as well as a
   count of items to be retrieved.
 
 Prisma supports both pagination approaches (read more in the
-[docs](https://www.prisma.io/docs/reference/tools-and-interfaces/prisma-client/pagination)). In this tutorial, you're going to implement limit-offset pagination.
+[docs](https://prisma.io/docs/reference/tools-and-interfaces/prisma-client/pagination)). In this tutorial, you're going to implement limit-offset pagination.
 
-<Callout type="info">
-  **Note**: You can read more about the ideas behind both pagination approaches
+<Callout>
+  Note: You can read more about the ideas behind both pagination approaches
   [here](https://dev-blog.apollodata.com/understanding-pagination-rest-graphql-and-relay-b10f835549e7).
 </Callout>
 
 Limit and offset have different names in the Prisma API:
 
 - The _limit_ is called `take`, meaning you're "taking" `x` elements after a provided start index.
-- The _start index_ is called `skip` since you're skipping that many elements in the list before collecting the items to be returned. If `skip` is not provided, it's `0` by default. The pagination then always starts from the beginning of the list.
+- The _start index_ is called `skip`, since you're skipping that many elements in the list before collecting the items to be returned. If `skip` is not provided, it's `0` by default. The pagination then always starts from the beginning of the list.
 
 So, go ahead and add the `skip` and `take` arguments to the `Query.field` field definition.
-
-<Instruction>
 
 Open your schema definitions and adjust the `Query.field` field to have a `skip` and `take` argument of the `Int` type defined:
 
@@ -125,24 +115,20 @@ type Query {
 }
 ```
 
-</Instruction>
-
 Now, adjust the field resolver function implementation:
-
-<Instruction>
 
 And now adjust the implementation of the `Query.feed` resolver function:
 
-```typescript
+```ts
 const resolvers = {
   // ... other resolvers maps ...
   Query: {
     // ... other Query object type resolver functions ...
-    feed: async (
+    async feed(
       parent: unknown,
       args: { filterNeedle?: string; skip?: number; take?: number },
       context: GraphQLContext,
-    ) => {
+    ) {
       const where = args.filterNeedle
         ? {
             OR: [
@@ -161,8 +147,6 @@ const resolvers = {
   },
 }
 ```
-
-</Instruction>
 
 All that's changing here is that the invocation of the `links` query now receives two additional arguments which might be carried by the incoming `args` object. Again, Prisma will take care of the rest.
 
@@ -188,15 +172,13 @@ Up next, let's also take into consideration that the `Query.feed` arguments shou
 
 As more links are posted onto the feed, the size of the feed increases. At some point, there could be thousands of feed items. When deploying the GraphQL API to production you would not want to allow querying ALL the links at once. That means you have to introduce a default value for the `take` argument.
 
-Furthermore, you should limit the `take` argument to be within a range that makes sense for the feed. The original hacker news shows 30 links per page.
+Furthermore, you should limit the `take` argument to be within a range that makes sense for the feed. The original Hackernews shows 30 links per page.
 
 Let's use the value 30 as the default value and 50 as the upper limit and 1 as the lower limit. Fetching 0 records does not make sense.
 
-<Instruction>
-
 Adjust the current schema resolver implementation according to the following.
 
-```typescript
+```ts
 // ... other code ...
 
 const applyTakeConstraints = (params: {
@@ -216,11 +198,11 @@ const resolvers = {
   // ... other resolvers maps ...
   Query: {
     // ... other Query object type resolver functions ...
-    feed: async (
+    async feed(
       parent: unknown,
       args: { filterNeedle?: string; skip?: number; take?: number },
       context: GraphQLContext,
-    ) => {
+    ) {
       const where = args.filterNeedle
         ? {
             OR: [
@@ -246,13 +228,9 @@ const resolvers = {
 }
 ```
 
-</Instruction>
-
 Cool! Now we can try executing an operation with a `take` argument value outside the range!
 
-<Instruction>
-
-Execute the following query operation via GraphiQL.
+Execute the following query operation via GraphiQL:
 
 ```graphql
 query {
@@ -263,8 +241,6 @@ query {
   }
 }
 ```
-
-</Instruction>
 
 As expected, you receive an error:
 
